# CARDIOKOOP

./: .gitignore  LICENSE.txt  README.md  pyproject.toml
data/: cardiovascular_parameter_space.csv  csv_data_500_12sigs_test1_u.csv  csv_data_500_12sigs_test1_x.csv  csv_data_500_12sigs_train1_u.csv  csv_data_500_12sigs_train1_x.csv  csv_data_500_12sigs_val1_u.csv  csv_data_500_12sigs_val1_x.csv  normalization_mean.npy  normalization_std.npy
notebooks/: generate_figures_and_tables.ipynb  notebook_utils.py
raw_data/: sample_metadata.csv  sample_metadata.mat
raw_data/csv_sims/: sim_00001.csv  sim_00001_params.json  sim_00002.csv  sim_00002_params.json  sim_00003.csv  sim_00003_params.json  sim_00004.csv  sim_00004_params.json  sim_00005.csv  sim_00005_params.json  sim_00006.csv  sim_00006_params.json  sim_00007.csv  sim_00007_params.json  sim_00008.csv  sim_00008_params.json  sim_00009.csv  sim_00009_params.json  sim_00010.csv  sim_00010_params.json  sim_00011.csv  sim_00011_params.json  sim_00012.csv  sim_00012_params.json  sim_00013.csv  sim_00013_params.json  sim_00014.csv  sim_00014_params.json  sim_00015.csv  sim_00015_params.json  sim_00016.csv  sim_00016_params.json  sim_00017.csv  sim_00017_params.json  sim_00018.csv  sim_00018_params.json  sim_00019.csv  sim_00019_params.json  sim_00020.csv  sim_00020_params.json  (+960 more)
results/bilstm/: csv_data_500_12sigs_20250625_204256_error.csv
results/gru/: csv_data_500_12sigs_20250625_170206_error.csv  csv_data_500_12sigs_20250625_170206_model.ckpt
scripts/: export_tables.py
tests/: test_utils.py
(+30 files in other folders)
