[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cardiokoop"
version = "1.0.0"
description = "Neural networks to learn Koopman eigenfunctions"
readme = "README.md"
authors = [
  
]
dependencies = [
  "numpy",
  "torch",
  "tqdm",
  "matplotlib",
  "statsmodels",
  "fastdtw",
  "pandas",
  "seaborn",
  "notebook",
  "optuna",
  "plotly",
  "scikit-learn",
  "kaleido"
]

[project.scripts]
cardiokoop = "cardiokoop.cli:main"

[project.optional-dependencies]
dev = [
  "pytest>=6.0",
  "black",
  "isort",
  "flake8",
]
